Add $proxy_set_header_ssl parameter. Remove deprecated ssl statement.

--- a/templates/vhost/locations/proxy.erb
+++ b/templates/vhost/locations/proxy.erb
@@ -9,6 +9,9 @@
 <% @proxy_set_header.each do |header| -%>
     proxy_set_header        <%= header %>;
 <% end -%>
+<% if @ssl then -%><% @proxy_set_header_ssl.each do |header| -%>
+    proxy_set_header        <%= header %>;
+<% end -%><% end -%>
 <% if @proxy_method -%>
     proxy_method        <%= @proxy_method %>;
 <% end -%>
