Add include files to locations

--- a/templates/vhost/location_footer.erb
+++ b/templates/vhost/location_footer.erb
@@ -33,5 +33,10 @@
     <%= line %>
     <%- end -%>
 <% end -%>
+<% if @include -%>
+  <% @include.each do |include_file| -%>
+    include <%= include_file %>;
+  <%- end -%>
+<% end -%>
   }
 
