--- a/templates/vhost/locations/fastcgi.erb
+++ b/templates/vhost/locations/fastcgi.erb
@@ -12,3 +12,9 @@
 <% if defined? @fastcgi_script %>
     fastcgi_param SCRIPT_FILENAME <%= @fastcgi_script %>;
 <% end -%>
+<% if defined? @fastcgi_param %>
+    # Enable custom fastcgi_params
+	<% fastcgi_param.each_pair do |key, val| -%>
+    fastcgi_param <%= key %> <%= val %>;
+	<% end -%>
+<% end %>
