--- a/templates/vhost/locations/fastcgi.erb
+++ b/templates/vhost/locations/fastcgi.erb
@@ -14,7 +14,7 @@
 <% end -%>
 <% if defined? @fastcgi_param %>
     # Enable custom fastcgi_params
-	<% fastcgi_param.each_pair do |key, val| -%>
+	<% @fastcgi_param.each_pair do |key, val| -%>
     fastcgi_param <%= key %> <%= val %>;
 	<% end -%>
 <% end %>
