--- a/templates/vhost/location_header.erb
+++ b/templates/vhost/location_header.erb
@@ -2,6 +2,12 @@
 <% if @internal -%>
     internal;
 <% end -%>
+<% if @mp4 -%>
+    mp4;
+<% end -%>
+<% if @flv -%>
+    flv;
+<% end -%>
 <% if @location_allow -%>
     <%- @location_allow.each do |allow_rule| -%>
     allow <%= allow_rule %>;
