--- a/templates/vhost/vhost_ssl_header.erb
+++ b/templates/vhost/vhost_ssl_header.erb
@@ -21,7 +21,7 @@ server {
   ssl_dhparam               <%= scope.lookupvar('nginx::config::conf_dir') %>/<%= @name.gsub(' ', '_') %>.dh.pem;
 <% end -%>
   ssl_session_cache         <%= @ssl_cache %>;
-  ssl_session_timeout       <%= @ssl_timeout %>;
+  ssl_session_timeout       <%= @ssl_session_timeout %>;
   ssl_protocols             <%= @ssl_protocols %>;
   ssl_ciphers               <%= @ssl_ciphers %>;
   ssl_prefer_server_ciphers on;
