Removed proxy_cache_valid as default when using proxy_cache option Added some tests also

--- a/templates/vhost/locations/proxy.erb
+++ b/templates/vhost/locations/proxy.erb
@@ -1,5 +1,7 @@
 <% if @proxy_cache -%>
     proxy_cache         <%= @proxy_cache %>;
+<% end -%>
+<% if @proxy_cache_valid -%>
     proxy_cache_valid   <%= @proxy_cache_valid %>;
 <% end -%>
     proxy_pass          <%= @proxy %>;
