--- a/templates/vhost/vhost_ssl_header.erb
+++ b/templates/vhost/vhost_ssl_header.erb
@@ -13,7 +13,7 @@ server {
   <%- end %>
   server_name  <%= @rewrite_www_to_non_www ? @server_name[0].gsub(/^www\./, '') : @server_name.join(" ") %>;
 
-  <% if @sts_max_age %>add_header Strict-Transport-Security "max-age=<%= sts_max_age %>; includeSubdomains";<% end %>
+  <% if @sts_max_age %>add_header Strict-Transport-Security "max-age=<%= @sts_max_age %>; includeSubdomains";<% end %>
 
   ssl on;
 
