cleanup resultant whitespace and key/value alignment in config files

--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -2,21 +2,23 @@
 user <%= @daemon_user %>;
 <% end -%>
 worker_processes <%= @worker_processes %>;
-<% if @worker_rlimit_nofile %>worker_rlimit_nofile <%= @worker_rlimit_nofile %>;<% end -%>
+<% if @worker_rlimit_nofile -%>
+worker_rlimit_nofile <%= @worker_rlimit_nofile %>;
+<% end -%>
 
-error_log  <%= @nginx_error_log %>;
 <% if @pid -%>
 pid        <%= @pid %>;
 <% end -%>
+error_log  <%= @nginx_error_log %>;
 
 events {
   worker_connections <%= @worker_connections -%>;
-  <% if @multi_accept == 'on' -%>
+  <%- if @multi_accept == 'on' -%>
     multi_accept on;
-  <% end -%>
-  <% if @events_use -%>
+  <%- end -%>
+  <%- if @events_use -%>
     use <%= @events_use %>;
-  <% end -%>
+  <%- end -%>
 }
 
 http {
@@ -27,9 +29,9 @@ http {
 
 <% if @sendfile == 'on' -%>
   sendfile    on;
-<% if @http_tcp_nopush == 'on' -%>
+  <%- if @http_tcp_nopush == 'on' -%>
   tcp_nopush on;
-<% end -%>
+  <%- end -%>
 <% end -%>
 
   server_tokens <%= @server_tokens %>;
@@ -46,30 +48,31 @@ http {
 <% if @gzip == 'on' -%>
   gzip         on;
   gzip_disable "MSIE [1-6]\.(?!.*SV1)";
-<% end -%>
 
+<% end -%>
 <% if @proxy_cache_path -%>
-  proxy_cache_path    <%= @proxy_cache_path %> levels=<%= @proxy_cache_levels %> keys_zone=<%= @proxy_cache_keys_zone %> max_size=<%= @proxy_cache_max_size %> inactive=<%= @proxy_cache_inactive %>;
-<% end -%>
+  proxy_cache_path        <%= @proxy_cache_path %> levels=<%= @proxy_cache_levels %> keys_zone=<%= @proxy_cache_keys_zone %> max_size=<%= @proxy_cache_max_size %> inactive=<%= @proxy_cache_inactive %>;
 
+<% end -%>
 <% if @fastcgi_cache_path -%>
   fastcgi_cache_path    	<%= @fastcgi_cache_path %> levels=<%= @fastcgi_cache_levels %> keys_zone=<%= @fastcgi_cache_keys_zone %> max_size=<%= @fastcgi_cache_max_size %> inactive=<%= @fastcgi_cache_inactive %>;
 <% end -%>
 <% if @fastcgi_cache_key -%>
-  fastcgi_cache_key		<%= @fastcgi_cache_key %>;
+  fastcgi_cache_key		    <%= @fastcgi_cache_key %>;
 <% end -%>
 <% if @fastcgi_cache_use_stale -%>
-  fastcgi_cache_use_stale 	<%= @fastcgi_cache_use_stale %>;
+  fastcgi_cache_use_stale <%= @fastcgi_cache_use_stale %>;
 <% end -%>
+<% if @http_cfg_append -%>
 
-<% if @http_cfg_append -%><% @http_cfg_append.sort_by{|k,v| k}.each do |key,value| -%>
-  <%= key %> <%= value %>;
-<% end -%>
+  <%- field_width = @http_cfg_append.inject(0) { |l,(k,v)| k.size > l ? k.size : l } -%>
+  <%- @http_cfg_append.sort_by{|k,v| k}.each do |key,value| -%>
+  <%= sprintf("%-*s", field_width, key) %> <%= value %>;
+  <%- end -%>
 <% end -%>
 
   include <%= @conf_dir %>/conf.d/*.conf;
   include <%= @conf_dir %>/sites-enabled/*;
-
 }
 <% if @mail -%>
 mail {
