--- a/templates/vhost/location_header.erb
+++ b/templates/vhost/location_header.erb
@@ -48,8 +48,8 @@
     <%- end -%>
   <%- end -%>
 <% end -%>
-<% if @raw_prepend && Array(@raw_prepend).size > 0 %>
+<% if @raw_prepend && Array(@raw_prepend).size > 0 -%>
     <%- Array(@raw_prepend).each do |line| -%>
     <%= line %>
     <%- end -%>
-<% end %>
+<% end -%>
