--- a/templates/vhost/locations/fastcgi.erb
+++ b/templates/vhost/locations/fastcgi.erb
@@ -1,6 +1,9 @@
 <% if defined? @www_root -%>
     root  <%= @www_root %>;
 <% end -%>
+<% if defined? @fastcgi_index -%>
+    fastcgi_index <%= @fastcgi_index %>;
+<% end -%>
 <% if @fastcgi_split_path -%>
     fastcgi_split_path_info <%= @fastcgi_split_path %>;
 <% end -%>
