Adding support for 1+ lines for proxy_cache_valid
Adding template support for an array of proxy_cache_valid params. Nginx supports multiple on this directive and to be honest, a single proxy_cache_valid isn't terrible useful on its own in many siutations.

--- a/templates/vhost/locations/proxy.erb
+++ b/templates/vhost/locations/proxy.erb
@@ -18,8 +18,10 @@
 <% if @proxy_cache -%>
     proxy_cache           <%= @proxy_cache %>;
 <% end -%>
-<% if @proxy_cache_valid -%>
-    proxy_cache_valid     <%= @proxy_cache_valid %>;
+<%- unless @proxy_cache_valid.nil? || @proxy_cache_valid.empty? -%>
+    <%- @proxy_cache_valid.each do |proxy_cache_valid_rule| -%>
+    proxy_cache_valid     <%= @proxy_cache_valid_rule %>;
+    <%- end -%>
 <% end -%>
 <%- unless @rewrite_rules.nil? || @rewrite_rules.empty? -%>
 
