Allow multiple proxy_cache_paths and allow users to be more specific.
In the past the module has only allowed for one proxy_cache_path to be
set. I might have a use case coming up where I will need a few caches
with different requirements so I wanted to be able to define both of
those within puppet. Another thing about breaking this into a hash
instead of using settings for each option is that now the user can
define the minimum options which are path and keys_zone as defined in
the docs [1].

The only thing I can think that this is missing is if we'd want the
option to be called proxy_cache_path still as then its a 1 to 1 matching
to the option within nginx. I only changed it because it does allow a
hash now and is a collection of proxy_caches. I can easily change this
back and make a new PR if that's what we want to go with.

[1] http://nginx.org/en/docs/http/ngx_http_proxy_module.html#proxy_cache_path

--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -50,8 +50,10 @@ http {
   gzip_disable "MSIE [1-6]\.(?!.*SV1)";
 
 <% end -%>
-<% if @proxy_cache_path -%>
-  proxy_cache_path        <%= @proxy_cache_path %> levels=<%= @proxy_cache_levels %> keys_zone=<%= @proxy_cache_keys_zone %> max_size=<%= @proxy_cache_max_size %> inactive=<%= @proxy_cache_inactive %>;
+<% if @proxy_cache -%>
+  <%- @proxy_cache.each do |key,value| -%>
+  proxy_cache_path        <%= key %> <%= value %>;
+  <%- end -%>
 
 <% end -%>
 <% if @fastcgi_cache_path -%>
