Adding SSL CRL support

--- a/templates/vhost/vhost_ssl_header.erb
+++ b/templates/vhost/vhost_ssl_header.erb
@@ -41,6 +41,9 @@ server {
   <%- if defined? @ssl_trusted_cert -%>
   ssl_trusted_certificate   <%= scope.lookupvar('nginx::config::conf_dir') %>/<%= @name.gsub(' ', '_') %>.trusted.crt;
   <%- end -%>
+  <%- if defined? @ssl_crl -%>
+  ssl_crl                   <%= @ssl_crl %>
+  <%- end -%>
 
 <% end -%>
 <% if Array(@resolver).count > 0 -%>
