--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -72,6 +72,9 @@ server {
 <% @proxy_set_header.each do |header| -%>
   proxy_set_header        <%= header %>;
 <% end -%>
+<% @proxy_ignore_headers.each do |header| -%>
+  proxy_ignore_headers    <%= header %>;
+<% end -%>
 <% if @add_header -%>
   <%- @add_header.each do |key,value| -%>
   add_header              <%= key %> <%= value %>;
@@ -94,4 +97,3 @@ server {
 
   access_log            <%= @access_log_real %>;
   error_log             <%= @error_log_real %>;
-
