Fix type in proxy_ignore_headers attribute

--- a/templates/vhost/locations/proxy.erb
+++ b/templates/vhost/locations/proxy.erb
@@ -18,7 +18,7 @@
 <% unless @proxy_ignore_headers.nil? -%>
 
     <%- @proxy_ignore_headers.each do |header| -%>
-    proxy_ignore_header      <%= header %>;
+    proxy_ignore_headers      <%= header %>;
     <%- end -%>
 
 <% end -%>
