moves rewrite_rules to location_header
so it can be used by all location-types

--- a/templates/vhost/location_header.erb
+++ b/templates/vhost/location_header.erb
@@ -54,3 +54,9 @@
     <%= line %>
     <%- end -%>
 <% end -%>
+<%- unless @rewrite_rules.nil? || @rewrite_rules.empty? -%>
+
+    <%- @rewrite_rules.each do |rewrite_rule| -%>
+    rewrite <%= rewrite_rule %>;
+    <%- end -%>
+<% end -%>
