--- a/templates/vhost/location_header.erb
+++ b/templates/vhost/location_header.erb
@@ -22,7 +22,7 @@
 <% if @location_custom_cfg_prepend -%>
   <%- @location_custom_cfg_prepend.each do |key,value| -%>
     <%- if value.is_a?(Hash) -%>
-      <%- value.each do |subkey,subvalue| -%>
+      <%- value.sort_by {|k,v| k}.each do |subkey,subvalue| -%>
         <%- Array(subvalue).each do |asubvalue| -%>
     <%= key %> <%= subkey %> <%= asubvalue %>
         <%- end -%>
@@ -37,7 +37,7 @@
 <% if @location_cfg_prepend -%>
   <%- @location_cfg_prepend.sort_by {|k,v| k}.each do |key,value| -%>
     <%- if value.is_a?(Hash) -%>
-      <%- value.each do |subkey,subvalue| -%>
+      <%- value.sort_by {|k,v| k}.each do |subkey,subvalue| -%>
         <%- Array(subvalue).each do |asubvalue| -%>
     <%= key %> <%= subkey %> <%= asubvalue %>;
         <%- end -%>
