--- a/templates/vhost/vhost_footer.erb
+++ b/templates/vhost/vhost_footer.erb
@@ -1,4 +1,4 @@
-<% if @include_files -%>
+<% if @include_files and @include_files_bottom -%>
   <%- @include_files.each do |file| -%>
   include <%= file %>;
   <%- end -%>
