--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -49,6 +49,11 @@ server {
   auth_basic_user_file <%= @auth_basic_user_file %>;
   <%- end -%>
 <% end -%>
+<% if @include_files and @include_files_top -%>
+    <%- @include_files.each do |file| -%>
+        include <%= file %>;
+    <%- end -%>
+<%- end -%>
 <% if instance_variables.any? { |iv| iv.to_s.include? 'client_' } -%>
 
   <%- if defined? @client_body_timeout -%>
