printing www_root in vhost_header
update vhost_header, www_root variable is  printed in server section. I'm aware that this might not be the best way to do this but i modified the module on my puppet server and now nginx vhost is working good.

--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -41,6 +41,11 @@ server {
   <%- end -%>
 <%- end -%>
   server_name           <%= @rewrite_www_to_non_www ? @server_name[0].gsub(/^www\./, '') : @server_name.join(" ") %>;
+
+<% if defined? @www_root -%>
+  root  <%= @www_root %>;
+<% end -%>
+
 <%- if instance_variables.any? { |iv| iv.to_s.include? 'auth_basic' } -%>
   <%- if defined? @auth_basic -%>
   auth_basic           "<%= @auth_basic %>";
