--- a/templates/vhost/locations/proxy.erb
+++ b/templates/vhost/locations/proxy.erb
@@ -2,6 +2,9 @@
     proxy_read_timeout    <%= @proxy_read_timeout %>;
     proxy_connect_timeout <%= @proxy_connect_timeout %>;
     proxy_redirect        <%= @proxy_redirect %>;
+<% if @proxy_http_version -%>
+    proxy_http_version    <%= @proxy_http_version %>;
+<% end -%>
 <% if @proxy_method -%>
     proxy_method          <%= @proxy_method %>;
 <% end -%>
