--- a/templates/conf.d/map.erb
+++ b/templates/conf.d/map.erb
@@ -7,10 +7,16 @@ map <%= @string %> $<%= @name %> {
   default <%= @default %>;
 <% end -%>
 
-<% if @mappings -%>
+<% if @mappings.is_a?(Hash) -%>
   <%- field_width = @mappings.inject(0) { |l,(k,v)| k.size > l ? k.size : l } -%>
   <%- @mappings.sort_by{|k,v| k}.each do |key,value| -%>
   <%= sprintf("%-*s", field_width, key) %> <%= value %>;
+  <%- end -%>
+<% end -%>
+<% if @mappings.is_a?(Array) -%>
+  <%- field_width = @mappings.inject(0) { |l,(h)| h['key'].size > l ? h['key'].size : l } -%>
+  <%- @mappings.each do |h| -%>
+  <%= sprintf("%-*s", field_width, h['key']) %> <%= h['value'] %>;
   <%- end -%>
 <% end -%>
 }
