Make the name of the upstream configurable
Make the name that appears in the nginx configuration independent of the
namevar known to puppet. This is useful when using exported resources,
if you want to have the same upstream names on multiple independent
clusters.

Modify spec for upstreams to test for proper string after upstream_name param addition

--- a/templates/conf.d/upstream_header.erb
+++ b/templates/conf.d/upstream_header.erb
@@ -1,4 +1,4 @@
-upstream <%= @name %> {
+upstream <%= @upstream_name %> {
 <% if @upstream_cfg_prepend -%><% @upstream_cfg_prepend.sort_by{|k,v| k}.each do |key,value| %>
 <% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
 <% Array(subvalue).each do |asubvalue| -%>
