--- a/templates/vhost/location_header.erb
+++ b/templates/vhost/location_header.erb
@@ -12,6 +12,9 @@
 <% if @location_satisfy -%>
     satisfy <%= @location_satisfy -%>;
 <% end -%>
+<% if @expires -%>
+    expires               <%= @expires %>;
+<% end -%>
 <% if @location_allow -%>
     <%- @location_allow.each do |allow_rule| -%>
     allow <%= allow_rule %>;
