setting index_files to undef; changing .erb templates

--- a/templates/vhost/locations/directory.erb
+++ b/templates/vhost/locations/directory.erb
@@ -5,9 +5,13 @@
 
     autoindex <%= @autoindex %>;
 <% end -%>
-<% if @index_files.count > 0 -%>
-    index    <% Array(@index_files).each do |i| %> <%= i %><% end %>;
+
+<% if defined? @index_files -%>
+  <%- if @index_files.count > 0 -%>
+      index    <% Array(@index_files).each do |i| %> <%= i %><% end %>;
+  <%- end -%>
 <% end -%>
+
 <% if @try_files -%>
     try_files<% @try_files.each do |try| -%> <%= try %><% end -%>;
 <% end -%>
