--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -136,7 +136,7 @@ server {
 <% end -%>
 <% if @rewrite_to_https -%>
   if ($ssl_protocol = "") {
-       return 301 https://$host<% if @ssl_port.to_i != 443 %>:<%= @ssl_port %><% end %>$request_uri;
+       return 301 https://$host<% if @rewrite_to_https_port %><% if @rewrite_to_https_port.to_i != 443 %>:<%= @rewrite_to_https_port %><% end %><% elsif @ssl_port.to_i != 443 %>:<%= @ssl_port %><% end %>$request_uri;
   }
 <% end -%>
 <% if @index_files.count > 0 -%>
