Make ssl_cert optional because it can come from an include

--- a/templates/vhost/vhost_ssl_settings.erb
+++ b/templates/vhost/vhost_ssl_settings.erb
@@ -1,6 +1,8 @@
   ssl on;
 
+<% if defined? @ssl_cert -%>
   ssl_certificate           <%= @ssl_cert %>;
+<% end -%>
   ssl_certificate_key       <%= @ssl_key %>;
 <% if defined? @ssl_client_cert -%>
   ssl_client_certificate    <%= @ssl_client_cert %>;
