--- a/templates/vhost/vhost_ssl_settings.erb
+++ b/templates/vhost/vhost_ssl_settings.erb
@@ -3,7 +3,9 @@
 <% if defined? @ssl_cert -%>
   ssl_certificate           <%= @ssl_cert %>;
 <% end -%>
+<% if defined? @ssl_key -%>
   ssl_certificate_key       <%= @ssl_key %>;
+<% end -%>
 <% if defined? @ssl_client_cert -%>
   ssl_client_certificate    <%= @ssl_client_cert %>;
   ssl_verify_client on;
