--- a/templates/vhost/vhost_ssl_settings.erb
+++ b/templates/vhost/vhost_ssl_settings.erb
@@ -18,7 +18,9 @@
 <% if @ssl_buffer_size -%>
   ssl_buffer_size           <%= @ssl_buffer_size %>;
 <% end -%>
+<% if defined?(@ssl_protocols) && @ssl_protocols != '' -%>
   ssl_protocols             <%= @ssl_protocols %>;
+<% end -%>
   ssl_ciphers               <%= @ssl_ciphers %>;
   ssl_prefer_server_ciphers on;
 <% if @ssl_crl -%>
