add proxy_buffering parameter to location & vhost
This allows us to configure nginx' [proxy_buffering](http://nginx.org/en/docs/http/ngx_http_proxy_module.html#proxy_buffering).
More specifically, it allows us to disable it, for the rare occasions
when this is needed.

--- a/templates/vhost/locations/proxy.erb
+++ b/templates/vhost/locations/proxy.erb
@@ -8,6 +8,9 @@
 <% if @proxy_set_body -%>
     proxy_set_body        <%= @proxy_set_body %>;
 <% end -%>
+<% if @proxy_buffering -%>
+    proxy_buffering       <%= @proxy_buffering %>;
+<% end -%>
 <% unless @proxy_set_header.nil? -%>
     <%- @proxy_set_header.each do |header| -%>
     proxy_set_header      <%= header %>;
