Expose the uwsgi_read_timeout parameter
http://nginx.org/en/docs/http/ngx_http_uwsgi_module.html#uwsgi_read_timeout

--- a/templates/vhost/locations/uwsgi.erb
+++ b/templates/vhost/locations/uwsgi.erb
@@ -6,3 +6,6 @@
 <% end -%>
     include <%= @uwsgi_params %>;
     uwsgi_pass <%= @uwsgi %>;
+<% if @uwsgi_read_timeout-%>
+    uwsgi_read_timeout <%= @uwsgi_read_timeout %>;
+<% end -%>
