[keepalive_requests] added keepalive_requests parameter in nginx.conf set it to default value of 100 as shown in nginx config Require this parameter as default value results in a huge number of TIME_WAIT connections with high QPS applications hitting nginx The check has been copied from the keepalive_timeout parameter

--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -62,6 +62,7 @@ http {
   server_names_hash_max_size <%= @names_hash_max_size %>;
 
   keepalive_timeout  <%= @keepalive_timeout %>;
+  keepalive_requests  <%= @keepalive_requests %>;
   tcp_nodelay        <%= @http_tcp_nodelay %>;
 
 <% if @gzip == 'on' -%>
