--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -10,7 +10,13 @@ worker_rlimit_nofile <%= @worker_rlimit_nofile %>;
 <% if @pid -%>
 pid        <%= @pid %>;
 <% end -%>
+<% if @nginx_error_log.is_a?(Array) -%>
+  <%- @nginx_error_log.each do |log_item| -%>
+error_log  <%= log_item %> <%= @nginx_error_log_severity %>;
+  <%- end -%>
+<% else -%>
 error_log  <%= @nginx_error_log %> <%= @nginx_error_log_severity %>;
+<% end -%>
 <% if @nginx_cfg_prepend -%>
 
 <%- field_width = @nginx_cfg_prepend.inject(0) { |l,(k,v)| k.size > l ? k.size : l } -%>
@@ -52,7 +58,13 @@ http {
 <% end -%>
 <% end -%>
 
-  access_log  <%= @http_access_log %>;
+<% if @http_access_log.is_a?(Array) -%>
+  <%- @http_access_log.each do |log_item| -%>
+  access_log  <%= log_item %><% if @http_format_log %> <%= @http_format_log%><% end %>;
+  <%- end -%>
+<% else -%>
+  access_log  <%= @http_access_log %><% if @http_format_log %> <%= @http_format_log%><% end %>;
+<% end -%>
 
 <% if @sendfile == 'on' -%>
   sendfile    on;
