Support for proxy_pass_header directive.
It is better to explicitly define this than using raw_append or raw_prepend.

From nginx docs:
Permits passing otherwise disabled header fields from a proxied server to a client.
By default, nginx does not pass the header fields "Date", "Server", "X-Pad", and "X-Accel-..." from the response of a proxied server to a client.

--- a/templates/vhost/locations/proxy.erb
+++ b/templates/vhost/locations/proxy.erb
@@ -24,6 +24,11 @@
     proxy_hide_header      <%= header %>;
     <%- end -%>
 <% end -%>
+<% unless @proxy_pass_header.nil? -%>
+    <%- @proxy_pass_header.each do |header| -%>
+    proxy_pass_header      <%= header %>;
+    <%- end -%>
+<% end -%>
 <% if @proxy_cache -%>
     proxy_cache           <%= @proxy_cache %>;
 <% end -%>
