--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -146,6 +146,9 @@ http {
 <% @proxy_hide_header.each do |header| -%>
   proxy_hide_header        <%= header %>;
 <% end -%>
+<% @proxy_pass_header.each do |header| -%>
+  proxy_pass_header        <%= header %>;
+<% end -%>
 <% if @proxy_headers_hash_bucket_size -%>
   proxy_headers_hash_bucket_size <%= @proxy_headers_hash_bucket_size %>;
 <% end -%>
