issue #348: vhost to server
Based on the discussion we had, I've renamed all instances of 'vhost' to
'server'.

The main reason for this is that NginX does not uphold the concept of
vHost: https://www.nginx.com/resources/wiki/start/topics/examples/server_blocks/

Stating:

    "Note: “VirtualHost” is an Apache term. NGINX does not have Virtual
    hosts, it has “Server Blocks” that use the server_name and listen
    directives to bind to tcp sockets."

Besides, the extended use of the concept causes confusion and
misunderstanding when it comes to NginX.

I still need to work on two more requests.

--- a/templates/vhost/vhost_footer.erb
+++ b/templates/vhost/vhost_footer.erb
@@ -6,8 +6,8 @@
 <%# make sure that allow comes before deny by forcing the allow key (if it -%>
 <%# exists) to be first in the output order.  The hash keys also need to be -%>
 <%# sorted so that the ordering is stable. -%>
-<% if @vhost_cfg_append -%>
-  <%- @vhost_cfg_append.sort_by{ |k, v| k.to_s == 'allow' ? '' : k.to_s }.each do |key,value| -%>
+<% if @server_cfg_append -%>
+  <%- @server_cfg_append.sort_by{ |k, v| k.to_s == 'allow' ? '' : k.to_s }.each do |key,value| -%>
     <%- if value.is_a?(Hash) -%>
       <%- value.sort_by {|k,v| k}.each do |subkey,subvalue| -%>
         <%- Array(subvalue).each do |asubvalue| -%>
